<resources>
    <string name="app_name">Weather Application</string>
    <string name="temperature">72\u00B0</string>
    <string name="degree">\u00B0</string>
    <string name="location">St. Paul, MN</string>
    <string name="feel_like">Feel like 78\u00B0</string>
    <string name="low_temperature">Low 65\u00B0</string>
    <string name="high_temperature">High 80\u00B0</string>
    <string name="humidity">Humidity 100%</string>
    <string name="pressure">Pressure 1023 hPa</string>
    <string name="sunset">Sunset: 9:00pm</string>
    <string name="sunrise">Sunrise: 8:00am</string>
</resources>