<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="10dp">

    <ImageView
        android:id="@+id/image"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/sun"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Jan 31"
        android:textSize="@dimen/font_size"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/image"/>

    <TextView
        android:id="@+id/tvTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperature"
        android:textSize="@dimen/font_size"
        android:textStyle="bold"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintStart_toEndOf="@id/tvDate"/>

    <TextView
        android:id="@+id/tvTemperatureHigh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/high_temperature"
        android:textSize="@dimen/font_size"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/guideline"
        app:layout_constraintStart_toStartOf="@id/tvTemperature"/>

    <TextView
        android:id="@+id/tvTemperatureLow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/low_temperature"
        android:textSize="@dimen/font_size"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toStartOf="@id/tvSunset"
        app:layout_constraintTop_toTopOf="@id/tvTemperatureHigh"
        app:layout_constraintStart_toEndOf="@id/tvTemperatureHigh"/>

    <TextView
        android:id="@+id/tvSunrise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sunrise"
        android:textSize="@dimen/font_size"
        android:textStyle="bold"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvSunset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sunset"
        android:textSize="@dimen/font_size"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toTopOf="@id/tvTemperatureHigh"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"/>

</androidx.constraintlayout.widget.ConstraintLayout>